fixed the too much space issue and removed the image untill i get another one

--- a/css/notFound.css
+++ b/css/notFound.css
@@ -196,6 +196,10 @@ main{
     /* border: 2px solid green; */
 }
 
+main > .img > img{
+    height: 100%;
+    width: 100%;
+}
 
 
 ul > li{
