--- a/css/style.css
+++ b/css/style.css
@@ -171,24 +171,24 @@ main{
     width: 100vw;
     flex-wrap: wrap;
     height: 100%;
-    padding-top: 18vh;
+    padding-top: 10vh;
 }
 .description{
     height: 599px;
     width: 430px;
-    padding: 20px;
-    margin: 20px 0px;
+    padding: 0px 20px;
+    margin: 0px 0px;
 }
 
 
-.img{
+/* .img{
     height: 599px;
     width: 318px;
     display: flex;
     justify-content: center;
     padding: 20px;
     margin: 20px 0px;
-}
+} */
 
 #phone{
     height: 100%;
